cadastro de associado

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
 mensagem.validacao.nome.obrigatorio = Nome \u00e9 obrigat\u00f3rio
-mensagem.validacao.nome.tamanho = Nome deve conter no m\u00e1ximo 100 caract\u00e9res
+mensagem.validacao.nome.tamanho = Nome deve conter no m\u00e1ximo 100 caracteres
