cadastro da votação

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,6 @@
-mensagem.validacao.nome.obrigatorio = Nome \u00e9 obrigat\u00f3rio
-mensagem.validacao.nome.tamanho = Nome deve conter no m\u00e1ximo 100 caracteres
+mensagem.validacao.nome.obrigatorio = Nome \u00e9 obrigat\u00f3rio.
+mensagem.validacao.nome.tamanho = Nome deve conter no m\u00e1ximo 100 caracteres.
+mensagem.validacao.id.pauta.obrigatorio = ID da pauta \u00e9 obrigat\u00f3rio.
+mensagem.validacao.id.pauta.positivo = ID da pauta deve ser positivo.
+mensagem.validacao.tempo.obrigatorio = Tempo da pauta \u00e9 obrigat\u00f3rio.
+mensagem.validacao.tempo.positivo = Tempo da pauta deve ser positivo.
