adicionando novas mensagens de validar para votação e voto

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,6 @@ mensagem.validacao.id.pauta.obrigatorio = ID da pauta \u00e9 obrigat\u00f3rio.
 mensagem.validacao.id.pauta.positivo = ID da pauta deve ser positivo.
 mensagem.validacao.tempo.obrigatorio = Tempo da pauta \u00e9 obrigat\u00f3rio.
 mensagem.validacao.tempo.positivo = Tempo da pauta deve ser positivo.
+mensagem.validacao.id.votacao.obrigatorio = ID da vota\u00e7\u00e3o \u00e9 obrigat\u00f3rio.
+mensagem.validacao.id.votacao.positivo = ID de vota\u00e7\u00e3o deve ser positivo.
+mensagem.validacao.tipo.voto.obrigatorio = Tipo do voto \u00e9 obrigat\u00f3rio.
