adicionando novas mensagens no arquivo de properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,8 @@ mensagem.validacao.tempo.positivo = Tempo da pauta deve ser positivo.
 mensagem.validacao.id.votacao.obrigatorio = ID da vota\u00e7\u00e3o \u00e9 obrigat\u00f3rio.
 mensagem.validacao.id.votacao.positivo = ID de vota\u00e7\u00e3o deve ser positivo.
 mensagem.validacao.tipo.voto.obrigatorio = Tipo do voto \u00e9 obrigat\u00f3rio.
+mensagem.votacao.nao.encontrada = Vota\u00e7\u00e3o n\u00e3o encontrada.
+mensagem.pauta.nao.encontrada = Pauta n\u00e3o encontrada.
+mensagem.associado.nao.encontrado = Associado n\u00e3o encontrado.
+mensagem.votacao.encerrada = A votação foi encerrada.
+mensagem.voto.unico = S\u00f3 \u00e9 poss\u00edvel votar apenas uma vez.
